Ruby 3.4.7 & Rails 8.1.1 update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,11 @@
-// Bootstrap and its variables
-@import "bootstrap";
-@import "actiontext";
-@import "services_enhanced";
-@import "modern_navbar";
-@import "layout_integration";
+// Core framework
+@use "bootstrap";
+
+// Application styles
+@use "actiontext";
+@use "services_enhanced";
+@use "modern_navbar";
+@use "layout_integration";
 
 // Custom styles
 body {
